--- a/Beoordelingssysteem/WPF2/MainWindow.xaml
+++ b/Beoordelingssysteem/WPF2/MainWindow.xaml
@@ -1,16 +1,21 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:i ="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         x:Class="WPF.MainWindow"
         xmlns:viewModel="clr-namespace:ViewModel;assembly=ViewModel"
+        xmlns:visualBasic="clr-namespace:Microsoft.VisualBasic;assembly=Microsoft.VisualBasic.Core"
         mc:Ignorable="d"
-        Title="Beoordelingsformulier" Height="679" Width="800">
+        Title="Beoordelingsformulier" Height="750" Width="800">
+    <Window.Resources>
+        <viewModel:FormContext x:Key="ViewModel"></viewModel:FormContext>
+    </Window.Resources>
     <Window.DataContext>
-        <viewModel:FormContext/>
+        <Binding Source="{StaticResource ViewModel}"/>
     </Window.DataContext>
-    <Grid Background="#FF3A3A3A" Margin="0,0,0,-163">
+    <Grid Background="#FF3A3A3A" Margin="0,0,0,-107">
         <Grid HorizontalAlignment="Left" Height="174" Margin="10,10,0,0" VerticalAlignment="Top" Width="187" Background="#FFB2B6B7">
             <StackPanel Margin="10">
                 <Label FontWeight="Bold">Wie wil je beoordelen?</Label>
@@ -32,63 +37,30 @@
             <Button Content="Export naar Word" Width="100" Height="25" Margin="0,0,150,150"/>
             <Button Content="Export naar .CSV" Width="100" Height="25" Margin="0,50,150,125"/>
         </Grid>
-        <Grid HorizontalAlignment="Center" Name="MainFormGrid" Visibility="Visible" Width="780" Margin="0,223,0,0" Height="486" VerticalAlignment="Top">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="159*"/>
-                <ColumnDefinition Width="101*"/>
-            </Grid.ColumnDefinitions>
-            <Grid Height="333" HorizontalAlignment="Left" Margin="74,0,0,99" VerticalAlignment="Bottom" Background="#FFB2B6B7" Grid.ColumnSpan="2" Width="616">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="64*"/>
-                    <ColumnDefinition Width="245*"/>
-                </Grid.ColumnDefinitions>
-                <Grid HorizontalAlignment="Left" Margin="10,0,0,0" Height="27" VerticalAlignment="Top" Width="120" Background="#FF2F39D2" Grid.Column="1">
-                    <Border BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Stretch" Height="Auto" Margin="0,0,0,0" VerticalAlignment="Stretch" Width="Auto"/>
-                </Grid>
-                <Grid HorizontalAlignment="Left" Margin="130,0,0,0" Height="27" VerticalAlignment="Top" Width="120" Background="#FF2F39D2" Grid.Column="1">
-                    <Border BorderBrush="Black" BorderThickness="2"/>
-                </Grid>
-                <Grid HorizontalAlignment="Left" Margin="250,0,0,0" Height="27" VerticalAlignment="Top" Width="120" Background="#FF2F39D2" Grid.Column="1">
-                    <Border BorderBrush="Black" BorderThickness="2"/>
-                </Grid>
-                <Grid HorizontalAlignment="Left" Margin="370,0,0,0" Height="27" VerticalAlignment="Top" Width="120" Background="#FF2F39D2" Grid.Column="1">
-                    <Border BorderBrush="Black" BorderThickness="2"/>
-                </Grid>
-
-            </Grid>
-            <Grid HorizontalAlignment="Right" Height="28" Margin="0,0,265,429" VerticalAlignment="Bottom" Width="138" Background="#FFB2B6B7">
-                <Label Name="SelectedCompetence" HorizontalAlignment="Center" VerticalAlignment="Top" Height="23" Content=""/>
-            </Grid>
-            <Label Content="Excellent (9+)" HorizontalAlignment="Left" Margin="229,0,0,408" VerticalAlignment="Bottom"/>
-            <Label Content="Goed (8)" HorizontalAlignment="Left" Margin="362,0,0,406" VerticalAlignment="Bottom"/>
-            <Label Content="Voldoende (6)" HorizontalAlignment="Left" Margin="0,0,0,406" VerticalAlignment="Bottom" Grid.Column="1"/>
-            <Label Content="Niet voldaan (4-)" HorizontalAlignment="Left" Margin="114,0,0,408" VerticalAlignment="Bottom" Grid.Column="1"/>
-            <TextBox HorizontalAlignment="Left" Margin="96,385,0,0" TextWrapping="Wrap" Text="Opmerkingen" VerticalAlignment="Top" Width="572" Height="54" Grid.ColumnSpan="2"/>
-            <ItemsControl Name="CompetenceRating" Margin="74,85,90,99" Grid.ColumnSpan="2"  ItemsSource="{Binding CriteriumList}">
+        <Grid Height="40" Margin="10,248,0,0" VerticalAlignment="Top" Background="#FFB2B6B7" HorizontalAlignment="Left" Width="206">
+            <Label Name="SelectedCompetence" HorizontalAlignment="Center" VerticalAlignment="Top" Height="23" Content=""/>
+        </Grid>
+        <Grid HorizontalAlignment="Center" Name="MainFormGrid" Visibility="Visible" Width="780" Margin="0,293,0,0" Background="#FFB2B6B7" Height="477" VerticalAlignment="Top">
+            <ItemsControl Name="CompetenceRating" Margin="5,-17,5,87"  ItemsSource="{Binding CriteriumList}" >
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <Grid Margin="0,0,0,5">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="50"/>
-                            </Grid.RowDefinitions>
+                        <Grid Margin="0,25,0,25">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="150"/>
+                                <ColumnDefinition Width="*"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
-                            <TextBlock Margin="0,0,0,0" Grid.RowSpan="4" TextWrapping="Wrap">
+                            <TextBlock Grid.Column="0" Name="Crit" Margin="0,0,0,0" Grid.RowSpan="4" TextWrapping="Wrap">
                                 <TextBlock.Text>
                                     <Binding Path="Name" StringFormat="Criterium : {0}"></Binding>
                                 </TextBlock.Text>
-                                <ToolTipService.ToolTip>
-                                    <TextBlock Width="150" TextWrapping="Wrap">
+                                    <ToolTipService.ToolTip>
+                                        <TextBlock Width="150" TextWrapping="Wrap">
                                         <TextBlock.Text>
                                             <Binding Path="Description"  StringFormat="Descriptie : {0}"/>
                                         </TextBlock.Text>
-                                    </TextBlock>
-                                </ToolTipService.ToolTip>
-                            </TextBlock>
-                            <ItemsControl Grid.Column="1"  ItemsSource="{Binding RatingsDictionary}">
+                                        </TextBlock>
+                                    </ToolTipService.ToolTip>
+                                </TextBlock>
+                            <ItemsControl Margin="250, 0 ,0,0" ItemsSource="{Binding RatingsDictionary}">
                                 <ItemsControl.ItemsPanel>
                                     <ItemsPanelTemplate>
                                         <WrapPanel />
@@ -96,7 +68,13 @@
                                 </ItemsControl.ItemsPanel>
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
-                                        <RadioButton GroupName="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Grid}}}" Margin="0,0,0,0" Grid.RowSpan="2">
+                                        <RadioButton Grid.Column="1" GroupName="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.Name}" Margin="0,0,0,0" Grid.RowSpan="2">
+                                            <i:Interaction.Triggers>
+                                                <i:EventTrigger EventName="Checked">
+                                                    <i:InvokeCommandAction Command="{Binding Source={StaticResource ViewModel}, Path=RatingCommand}" CommandParameter="{Binding ElementName=Crit , Path=Text}">
+                                                    </i:InvokeCommandAction>
+                                                </i:EventTrigger>
+                                            </i:Interaction.Triggers>
                                             <RadioButton.Content>
                                                 <Binding Path="Value" StringFormat="Beoordeling : {0}"></Binding>
                                             </RadioButton.Content>
@@ -115,6 +93,7 @@
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
+            <TextBox HorizontalAlignment="Left" TextWrapping="Wrap" Text="Opmerkingen" Width="572" Height="54" Margin="91,362,0,0" VerticalAlignment="Top"/>
         </Grid>
     </Grid>
 </Window>
