--- a/View/App.xaml
+++ b/View/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="WpfApp3.App"
+﻿<Application x:Class="View.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WpfApp3"
