--- a/View/AssessmentForm.xaml
+++ b/View/AssessmentForm.xaml
@@ -1,16 +1,14 @@
-﻿<Window
+﻿<Window x:Class="View.AssessmentForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:i ="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        x:Class="WPF.MainWindow"
         xmlns:viewModel="clr-namespace:ViewModel;assembly=ViewModel"
-        xmlns:visualBasic="clr-namespace:Microsoft.VisualBasic;assembly=Microsoft.VisualBasic.Core"
+        xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
-        Title="Beoordelingsformulier" Height="750" Width="800">
+        Title="AssessmentForm" Height="450" Width="800">
     <Window.Resources>
-        <viewModel:FormContext x:Key="ViewModel"></viewModel:FormContext>
+        <viewModel:AssessmentFormViewModel x:Key="ViewModel"></viewModel:AssessmentFormViewModel>
     </Window.Resources>
     <Window.DataContext>
         <Binding Source="{StaticResource ViewModel}"/>
@@ -69,12 +67,12 @@
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
                                         <RadioButton Grid.Column="1" GroupName="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.Name}" Margin="0,0,0,0" Grid.RowSpan="2">
-                                            <i:Interaction.Triggers>
-                                                <i:EventTrigger EventName="Checked">
-                                                    <i:InvokeCommandAction Command="{Binding Source={StaticResource ViewModel}, Path=RatingCommand}" CommandParameter="{Binding ElementName=Crit , Path=Text}">
-                                                    </i:InvokeCommandAction>
-                                                </i:EventTrigger>
-                                            </i:Interaction.Triggers>
+                                            <b:Interaction.Triggers>
+                                                <b:EventTrigger EventName="Checked">
+                                                    <b:InvokeCommandAction Command="{Binding Source={StaticResource ViewModel}, Path=RatingCommand}" CommandParameter="{Binding ElementName=Crit , Path=Text}">
+                                                    </b:InvokeCommandAction>
+                                                </b:EventTrigger>
+                                            </b:Interaction.Triggers>
                                             <RadioButton.Content>
                                                 <Binding Path="Value" StringFormat="Beoordeling : {0}"></Binding>
                                             </RadioButton.Content>
@@ -95,5 +93,6 @@
             </ItemsControl>
             <TextBox HorizontalAlignment="Left" TextWrapping="Wrap" Text="Opmerkingen" Width="572" Height="54" Margin="91,362,0,0" VerticalAlignment="Top"/>
         </Grid>
+        <Button x:Name="GroupAdmin" Content="Groepen beheren" HorizontalAlignment="Left" Margin="217,25,0,0" VerticalAlignment="Top" Height="25" Width="106" Click="GroupAdmin_Click"/>
     </Grid>
 </Window>
