--- a/View/FormAssessment/ShowAssessmentUserControl.xaml
+++ b/View/FormAssessment/ShowAssessmentUserControl.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="View.ShowAssessmentFormView"
+﻿<UserControl x:Class="View.FormAssessment.ShowAssessmentUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:View"
+             xmlns:local="clr-namespace:View.FormAssessment"
              mc:Ignorable="d" 
              d:DesignHeight="650" Width="890">
     <Grid Background="#FF3A3A3A">
@@ -70,24 +70,26 @@
         <ItemsControl d:ItemsSource="{d:SampleData ItemCount=5}" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="4" Background="#FFB2B6B7" BorderThickness="3" BorderBrush="AliceBlue">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <ItemsControl>
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment ="Left"/>
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <Grid Width="180" Height="50">
-                                    <Border>
-                                        <Border.BorderThickness>3</Border.BorderThickness>
-                                        <Border.BorderBrush>AliceBlue</Border.BorderBrush>
-                                    </Border>
-                                    <RadioButton HorizontalAlignment="Center" VerticalAlignment="Center" Content="{Binding}"></RadioButton>
-                                </Grid>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
+                    <Grid>
+                        <ItemsControl d:ItemsSource="{d:SampleData ItemCount=4}">
+                            <ItemsControl.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment ="Left"/>
+                                </ItemsPanelTemplate>
+                            </ItemsControl.ItemsPanel>
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <Grid Width="180" Height="50">
+                                        <Border>
+                                            <Border.BorderThickness>3</Border.BorderThickness>
+                                            <Border.BorderBrush>AliceBlue</Border.BorderBrush>
+                                        </Border>
+                                        <RadioButton HorizontalAlignment="Center" VerticalAlignment="Center" Content="{Binding}"></RadioButton>
+                                    </Grid>
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                        </ItemsControl>
+                    </Grid>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
