--- a/View/FormAssessment/FormAssessmentWindow.xaml
+++ b/View/FormAssessment/FormAssessmentWindow.xaml
@@ -5,9 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:View.FormAssessment"
         xmlns:view="clr-namespace:View.FormAssessment"
+        xmlns:vm="clr-namespace:ViewModel;assembly=ViewModel"
         mc:Ignorable="d"
         Title="Beoordeling formulier" Height="650" Width="890">
-    <Grid>
+
+    <Window.DataContext>
+        <vm:ViewModel/>
+    </Window.DataContext>
+    
+    <StackPanel>
         <view:ShowAssessmentUserControl/>
-    </Grid>
+        <TextBox Text="{Binding MyValue, Mode=TwoWay}"/>
+        <Button Content="Click" Command="{Binding MyCommand}"/>
+    </StackPanel>
 </Window>
