--- a/View/FormAssessment/FormAssessmentWindow.xaml
+++ b/View/FormAssessment/FormAssessmentWindow.xaml
@@ -3,11 +3,108 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:View.FormAssessment"
         xmlns:view="clr-namespace:View.FormAssessment"
+        xmlns:viewModel="clr-namespace:ViewModel.FormAssessment;assembly=ViewModel"
+        xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
         Title="Beoordeling formulier" Height="650" Width="890">
-    <Grid>
-        <view:ShowAssessmentUserControl/>
+    <Window.Resources>
+        <viewModel:FormAssessmentViewModel x:Key="ViewModel"/>
+    </Window.Resources>
+    <Window.DataContext>
+        <Binding Source="{StaticResource ResourceKey=ViewModel}"></Binding>
+    </Window.DataContext>
+    <Grid Background="#FF3A3A3A">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto"></ColumnDefinition>
+            <ColumnDefinition Width="auto"></ColumnDefinition>
+            <ColumnDefinition Width="auto"></ColumnDefinition>
+            <ColumnDefinition Width="auto"></ColumnDefinition>
+            <ColumnDefinition Width="auto"></ColumnDefinition>
+            <ColumnDefinition Width="auto"></ColumnDefinition>
+            <ColumnDefinition Width="auto"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <view:ProjectGroupUserControl Grid.Row="1" Grid.Column="0" 
+                                      DataContext="{Binding}">
+        </view:ProjectGroupUserControl>
+        <Button Name="ManageStudentsButton" Content="Groepen beheren" 
+                Height="30" Grid.Row="1" Grid.Column="0" Margin="20,50"></Button>
+        <Border Grid.Row="4" Grid.RowSpan="3" Margin="5">
+            <Border.BorderBrush>AliceBlue</Border.BorderBrush>
+            <Border.BorderThickness>3</Border.BorderThickness>
+            <Grid  Height="450"  Background="DarkGray">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"></RowDefinition>
+                    <RowDefinition Height="auto"></RowDefinition>
+                    <RowDefinition Height="auto"></RowDefinition>
+                </Grid.RowDefinitions>
+                <Label Grid.Row="0" Margin="5" 
+                       HorizontalAlignment="Center" VerticalAlignment="Center"
+                       Width="175" Height="25" 
+                       Content="{Binding SelectedCompetenceViewModel.Title}"/>
+                <Label Grid.Row="1" Margin="5" 
+                       HorizontalAlignment="Center" 
+                       VerticalAlignment="Center" Width="175" Height="25" 
+                       Content="Criteria: "/>
+                <TextBlock Grid.Row="2">
+                    <TextBlock.Text>
+                        <MultiBinding StringFormat="{}{0} + &#x0a; + {1} + &#x0a; + {2}">
+                            <Binding Path="SelectedCompetenceViewModel.Description"/>
+                            <Binding Path="SelectedCriterionViewModel.Title"/>
+                            <Binding Path="SelectedCriterionViewModel.Description"/>
+                        </MultiBinding>
+                    </TextBlock.Text>
+                </TextBlock>
+            </Grid>
+        </Border>
+        <Grid Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" 
+              Width="350" Height="125" Background="DarkGray" 
+              Margin="0,25,50,0">
+
+        </Grid>
+        <ListBox 
+            SelectionMode="Single"
+            SelectedItem="{Binding SelectedCompetenceViewModel , Mode=TwoWay}"
+            Background="DarkGray" 
+            Name="CompetenceList" 
+            VerticalAlignment="Center" 
+            HorizontalAlignment="Center" 
+            Grid.Row="1" Grid.Column ="5" 
+            Height="125"
+            Margin="5" Width="160" 
+            ItemsSource="{Binding CompetenceViewModels}">
+            <
+        </ListBox>
+        <ItemsControl Grid.Row ="2" Grid.Column="1" Grid.ColumnSpan="5" 
+                      ItemsSource="{Binding IndicatorViewModels}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Border>
+                        <Border.BorderBrush>Black</Border.BorderBrush>
+                        <Border.BorderThickness>2</Border.BorderThickness>
+                        <TextBlock Background="Blue" Height="30" Width="150" 
+                                   Text="{Binding Title}" 
+                                   TextAlignment="Center"
+                                   FontSize="20"/>
+                    </Border>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+        <view:CriteriaUserControl Grid.Row="4" Grid.Column="1" Grid.RowSpan="3" Grid.ColumnSpan="5"></view:CriteriaUserControl>
     </Grid>
 </Window>
