--- a/WPF2/GroupSelection.xaml
+++ b/WPF2/GroupSelection.xaml
@@ -5,29 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:View"
         mc:Ignorable="d"
-        Title="GroupSelection" Height="450" Width="800">
+        Title="GroupSelection" Height="450" Width="600">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Border BorderBrush="Black" Background="Gray" CornerRadius="2
-                " BorderThickness="1" Margin="-14,0,0,0" HorizontalAlignment="Left" Width="295"/>
-
-        <ListBox x:Name="GroupListBox" Margin="33,53,0,0" SelectionChanged="ListBox_SelectionChanged" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Width="232" Height="206" VerticalAlignment="Top">
-            <ListBoxItem Content=""></ListBoxItem>
-            <ListBoxItem Content=""></ListBoxItem>
-        </ListBox>
-        <TextBox x:Name="AddGroupTextBox" Margin="33,276,0,0" TextWrapping="Wrap" Text="Groep" VerticalContentAlignment="Center" RenderTransformOrigin="0.493,0.496" HorizontalAlignment="Left" Width="177" Height="36" VerticalAlignment="Top"/>
-        <Button x:Name="AddGroupButton" Content="Voeg toe" Margin="213,276,0,0" RenderTransformOrigin="0.543,0.479" Height="36" VerticalAlignment="Top" HorizontalAlignment="Left" Width="52"/>
-        <Button Content="Verwijder geselecteerde groep" HorizontalAlignment="Left" Margin="33,317,0,0" VerticalAlignment="Top" Height="39" Width="232" Click="Button_Click"/>
-        <ListBox x:Name="StudentListBox" Margin="286,10,0,140" SelectionChanged="ListBox_SelectionChanged" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Width="235">
-            <ListBoxItem Content="Student1"/>
-            <ListBoxItem Content="Student2"/>
-        </ListBox>
-        <TextBox x:Name="StudentNumberTextBox" Margin="290,300,0,0" TextWrapping="Wrap" Text="Studentnummer" VerticalContentAlignment="Center" RenderTransformOrigin="0.493,0.496" HorizontalAlignment="Left" Width="114" Height="36" VerticalAlignment="Top"/>
-        <Button x:Name="AddStudentButton" Content="Voeg toe" Margin="748,138,0,0" RenderTransformOrigin="0.543,0.479" Height="36" VerticalAlignment="Top" HorizontalAlignment="Left" Width="52"/>
-        <Button Content="Verwijder geselecteerde student" HorizontalAlignment="Left" Margin="289,385,0,0" VerticalAlignment="Top" Height="39" Width="111" Click="Button_Click"/>
-        <TextBox x:Name="StudentNameTextBox" Margin="409,299,0,0" TextWrapping="Wrap" Text="Naam Student" VerticalContentAlignment="Center" RenderTransformOrigin="0.493,0.496" HorizontalAlignment="Left" Width="112" Height="36" VerticalAlignment="Top"/>
+        <Border Background="Gray" CornerRadius="2" BorderThickness="1" Margin="-14,0,0,0" HorizontalAlignment="Left" Width="295" ></Border>
+        <ListBox x:Name="GroupListBox" Margin="33,53,0,175" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Width="232"  IsSynchronizedWithCurrentItem="true"></ListBox>
+        <TextBox x:Name="AddGroupTextBox" Margin="33,0,0,122" TextWrapping="Wrap" Text="{}" VerticalContentAlignment="Center" RenderTransformOrigin="0.493,0.496" HorizontalAlignment="Left" Width="177" Height="36" VerticalAlignment="Bottom"/>
+        <Button x:Name="AddGroupButton" Content="Voeg toe" Margin="213,0,0,122" RenderTransformOrigin="0.543,0.479" Height="36" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="52"/>
+        <Button x:Name="DeleteSelectedGroupButton" Content="Verwijder geselecteerde groep" HorizontalAlignment="Left" Margin="33,0,0,78" VerticalAlignment="Bottom" Height="39" Width="232"/>
+        
+        
+        <ListBox x:Name="StudentListBox" Margin="297,10,0,139" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Width="231"></ListBox>
+        <TextBox x:Name="StudentNumberTextBox" Margin="297,0,0,98" TextWrapping="Wrap" Text="Studentnummer" VerticalContentAlignment="Center" RenderTransformOrigin="0.493,0.496" HorizontalAlignment="Left" Width="114" Height="36" VerticalAlignment="Bottom"/>
+        <Button x:Name="AddStudentButton" Content="Voeg toe" Margin="297,0,0,58" RenderTransformOrigin="0.543,0.479" Height="36" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="231" />
+        <Button x:Name="DeleteSelectedStudentButton" Content="Verwijder geselecteerde student" HorizontalAlignment="Left" Margin="297,0,0,10" Width="231" Height="40" VerticalAlignment="Bottom"/>
+        <TextBox x:Name="StudentNameTextBox" Margin="416,0,0,98" TextWrapping="Wrap" Text="Naam Student" VerticalContentAlignment="Center" RenderTransformOrigin="0.493,0.496" HorizontalAlignment="Left" Width="112" Height="36" VerticalAlignment="Bottom"/>
+        <Button x:Name="StartAssessmentButton" Content="Start Met Beoordeling" HorizontalAlignment="Left" Margin="140,0,0,19" VerticalAlignment="Bottom" Height="31" Width="125" Click="StartAssessment"/>
     </Grid>
 </Window>
