--- a/View/FormAssessment/CriteriaInformationUserControl.xaml
+++ b/View/FormAssessment/CriteriaInformationUserControl.xaml
@@ -4,9 +4,38 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:View.FormAssessment"
+             xmlns:formAssessment="clr-namespace:ViewModel.FormAssessment;assembly=ViewModel"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+             d:DataContext="{d:DesignInstance formAssessment:FormAssessmentViewModel}">
+    <StackPanel>
+        <TextBlock TextWrapping="Wrap" 
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Center"
+                   FontWeight="Bold" Margin="5" 
+                   Text="{Binding SelectedCompetenceViewModel.SelectedCriterionViewModel.Title}"/>
+        <TextBlock TextWrapping="Wrap" 
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Center"
+                   Margin="5" 
+                   Text="{Binding SelectedCompetenceViewModel.SelectedCriterionViewModel.Description}"/>
+        <ItemsControl 
+            ItemsSource="{Binding SelectedCompetenceViewModel.SelectedCriterionViewModel.CriterionAssessments}">
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel>
+                        <TextBlock FontWeight="Bold" 
+                                   Text="{Binding Indicator.Title}"
+                                   VerticalAlignment="Center"
+                                   HorizontalAlignment="Center"></TextBlock>
+                        <TextBlock 
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Center"
+                            TextWrapping="Wrap" 
+                            Text="{Binding Description}" 
+                            Padding="5"></TextBlock>
+                    </StackPanel>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+    </StackPanel>
 </UserControl>
